# Apna-Lawyer

./: CHANGES_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_GUIDE.md  README.md  UI_CHANGES_SUMMARY.md  render.yaml  test-ui-changes.js
backend/: .env.example  .env.production  .gitignore  API_TESTING_GUIDE.md  AUTHENTICATION_API_GUIDE.md  AUTHENTICATION_SYSTEM_SUMMARY.md  Aptfile  DATABASE_ORGANIZATION_SUMMARY.md  DEPLOYMENT_CONFIG.md  Dockerfile  SETUP_COMPLETE.md  TEST_ORGANIZATION_SUMMARY.md  USERS_TESTING_SUMMARY.md  build.sh  chat_image_app.py  db.sqlite3  deploy.md  disable_rls_instructions.py  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements-minimal.txt  requirements.txt  run_all_tests.py  setup_supabase_database.py  simple_users_test.py  startup.sh  supabase_schema.sql  sync_lawyers_to_supabase.py  test_auth_simple.py  test_endpoints.py  test_gemini_connection.py  test_new_endpoints.py  test_runner.py  usage_example.py
backend/apna_lawyer/: middleware.py  settings.py  supabase_client.py  urls.py  utils.py  wsgi.py
backend/chats/: admin.py  ai_service.py  image_chat_service.py  models.py  ocr_service.py  urls.py  views.py
backend/core/: settings.py
backend/db/: README.md  __init__.py  direct_sync.py  rls_bypass.py  sync_lawyers.py
backend/lawyers/: admin.py  apps.py  models.py  test_api.py  urls.py  views.py
backend/tests/: __init__.py  complete_test_data.sql  create_dummy_user.py  create_test_data.sql  run_all_tests.py  test_ai_integration.py  test_chats_api.py  test_gemini_connection.py  test_image_chat.py  test_settings.py  (+6 more)
(+122 files in other folders)
