[tool.poetry]
name = "legal-doc-backend"
version = "0.1.0"
description = "Legal Document Analysis Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "4.2.9"
djangorestframework = "3.14.0"
django-cors-headers = "4.3.1"
Pillow = {version = "10.2.0", markers = "platform_machine != 'arm64'"}
PyPDF2 = "3.0.1"
pytesseract = "0.3.10"
langchain = "0.0.350"
langchain-community = "0.0.10"
langchain-google-genai = "0.0.5"
google-generativeai = "0.3.1"
python-dotenv = "1.0.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"